highcontrastmode / fix color picker

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,6 +165,7 @@ input[type="text"]
     height: 15px;
     padding: 5px !important;
     border-radius: 4px;
+    cursor:pointer;
 }
 
 .button,.bluebutton,.greybutton,.smallbutton
